syntax = "proto3";

package bean;

import "mycrypto/key.proto";

message block_header {
    int32 version = 1;
    bytes previous_hash = 2;
    bytes gas_limit = 3;
    bytes gas_used = 4;
    int64 height = 5;
    int64 timestamp = 6;
    bytes merkle_root = 7;
    repeated bytes tx_hashes = 8;
    mycrypto.point leader_pub_key = 9;
    repeated mycrypto.point minor_pub_keys = 10;
}

message block_data {
    int32 tx_count = 1;
    repeated transaction tx_list = 2;
}

message block {
    block_header header = 2;
    block_data data = 3;
    mycrypto.signature multi_sig = 4;
}

message transaction_data {
    int32 version = 1;
    int64 nonce = 2;
    int32 type = 3;
    string to = 4;
    bytes amount = 5;
    bytes gas_price = 6;
    bytes gas_limit = 7;
    int64 timestamp = 8;
    bytes data = 9;
    mycrypto.point pub_key = 10;
}

message transaction {
    transaction_data data = 1;
    mycrypto.signature sig = 2;
}

message multi_signature {
    mycrypto.signature sig = 1;
    bytes bitmap = 2;
}